--- a/Computo2/Practica 7/Practica7.css
+++ b/Computo2/Practica 7/Practica7.css
@@ -1,12 +1,64 @@
 .computos{
-	background-color: green;
+	background-color: #35661C;
 	color: white;
 	padding: 10px;
 }
 
 #encabezado{
-	background-color: #68FB94;
+	background-color: #7EA76A;
 	color: black;
 	padding: 40px;
 	text-align: center;
+}
+
+* {margin:0; padding:0; border:0;}
+	html, body {
+	width: auto;
+	height: 100%;
+	font-family:Verdana, Geneva, sans-serif;
+	font-weight:bold;
+	background-color:#A6F7A0;
+}
+header{
+	position:relative;
+	background-color: #095A3A;
+	color:#FFF;
+	width:98%;
+	height:13%;
+	margin: 0px auto;
+}
+section{
+	position:relative;
+	float:left;
+	background-color:#35661C;
+	width:78%;
+	height:58%;
+	color:#FFF;
+}
+article{
+	background-color: #59AB2F;
+	width:98%;
+	height:58%;
+	color:#FFF;
+}
+aside{
+	position:relative;
+	background-color:#16250F;
+	width:18%;
+	height:55%;
+	color:#FFF;
+	float:left;
+}
+footer{
+	position:relative;
+	background-color:#54FC05;
+	width:98%;
+	height:5%;
+	color:#FFF;
+	clear:both;
+}
+
+header,section,footer,aside,article,nav
+{
+	margin:1%;
 }
